--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Segoe UI, Arial, sans-serif";
+}
+
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+  border: 1px solid #678c89;
+}
+
+.todo-item {
+  list-style-type: none;
+  padding: 10px 15px;
+  border-top: 1px solid #678c89;
+}
+
+.todo-item input {
+  margin-right: 15px;
+}
 .App {
   text-align: center;
 }
